// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog close button text and variation can be changed 1`] = `
Object {
  "props": Object {
    "children": "Foo",
    "closeButtonText": "No thank you. I don't like saving money",
    "closeButtonVariation": "danger",
  },
  "wrapper": <Displaced
    dialogClass="ds-c-dialog ds-base"
    escapeExits={true}
    focusDialog={true}
    includeDefaultStyles={false}
    mounted={true}
    titleId="dialog-title dialog-content"
    underlayClass="ds-c-dialog-wrap"
    underlayClickExits={false}
  >
    <div
      role="document"
    >
      <header
        className="ds-c-dialog__header"
        role="banner"
      >
        <Button
          aria-label="Close modal dialog"
          className="ds-c-dialog__close"
          component="button"
          type="button"
          variation="danger"
        >
          <CloseIcon />
          No thank you. I don't like saving money
        </Button>
      </header>
      <main
        role="main"
      >
        <div
          id="dialog-content"
        >
          Foo
        </div>
      </main>
    </div>
  </Displaced>,
}
`;

exports[`Dialog renders react-aria-modal 1`] = `
<Dialog
  ariaCloseLabel="Close modal dialog"
  closeButtonText="Close"
  closeButtonVariation="transparent"
  closeIcon={<CloseIcon />}
  escapeExitDisabled={false}
  escapeExits={true}
  getApplicationNode={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  heading="Foo"
  onExit={[MockFunction]}
  underlayClickExits={false}
>
  <Displaced
    dialogClass="ds-c-dialog ds-base"
    escapeExits={true}
    focusDialog={true}
    getApplicationNode={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    includeDefaultStyles={false}
    mounted={true}
    onExit={[MockFunction]}
    titleId="dialog-title dialog-content"
    underlayClass="ds-c-dialog-wrap"
    underlayClickExits={false}
  >
    <Portal
      containerInfo={
        <div>
          <div>
            <div
              class="ds-c-dialog-wrap"
            >
              <div
                aria-labelledby="dialog-title dialog-content"
                class="ds-c-dialog ds-base"
                id="react-aria-modal-dialog"
                role="dialog"
                tabindex="-1"
              >
                <div
                  role="document"
                >
                  <header
                    class="ds-c-dialog__header"
                    role="banner"
                  >
                    <h1
                      class="ds-h2"
                      id="dialog-title"
                    >
                      Foo
                    </h1>
                    <button
                      aria-label="Close modal dialog"
                      class="ds-c-button ds-c-button--transparent ds-c-dialog__close"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        aria-labelledby="icon-1__title"
                        class="ds-c-icon ds-c-icon--close "
                        focusable="false"
                        id="icon-1"
                        role="img"
                        viewBox="0 0 16 16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <title
                          id="icon-1__title"
                        >
                          Close
                        </title>
                        <path
                          d="M14.647 11.213c.235.235.353.521.353.858 0 .337-.118.624-.353.859l-1.717 1.717a1.17 1.17 0 01-.86.354c-.336 0-.622-.118-.857-.354l-3.714-3.712-3.712 3.712A1.166 1.166 0 012.93 15c-.337 0-.622-.118-.859-.354L.353 12.93A1.165 1.165 0 010 12.07c0-.337.117-.623.353-.858L4.065 7.5.353 3.789A1.168 1.168 0 010 2.929c0-.336.117-.622.353-.857L2.07.353C2.307.118 2.592 0 2.93 0c.337 0 .623.118.858.353L7.5 4.065 11.213.353c.235-.235.521-.353.857-.353.337 0 .623.118.86.353l1.717 1.719c.235.235.353.521.353.857 0 .338-.118.623-.353.86L10.935 7.5l3.712 3.712z"
                          fill-rule="evenodd"
                        />
                      </svg>
                      Close
                    </button>
                  </header>
                  <main
                    role="main"
                  >
                    <div
                      id="dialog-content"
                    >
                      Bar
                    </div>
                  </main>
                </div>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <Modal
        dialogClass="ds-c-dialog ds-base"
        dialogId="react-aria-modal-dialog"
        escapeExits={true}
        focusDialog={true}
        focusTrapPaused={false}
        getApplicationNode={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        includeDefaultStyles={false}
        mounted={true}
        onExit={[MockFunction]}
        scrollDisabled={true}
        titleId="dialog-title dialog-content"
        underlayClass="ds-c-dialog-wrap"
        underlayClickExits={false}
        underlayColor="rgba(0,0,0,0.5)"
        underlayProps={Object {}}
      >
        <FocusTrap
          _createFocusTrap={[Function]}
          active={true}
          focusTrapOptions={
            Object {
              "escapeDeactivates": true,
              "initialFocus": "#react-aria-modal-dialog",
            }
          }
          paused={false}
          tag="div"
        >
          <div>
            <div
              className="ds-c-dialog-wrap"
              style={Object {}}
            >
              <div
                aria-labelledby="dialog-title dialog-content"
                className="ds-c-dialog ds-base"
                id="react-aria-modal-dialog"
                key="b"
                role="dialog"
                style={Object {}}
                tabIndex="-1"
              >
                <div
                  role="document"
                >
                  <header
                    className="ds-c-dialog__header"
                    role="banner"
                  >
                    <h1
                      className="ds-h2"
                      id="dialog-title"
                    >
                      Foo
                    </h1>
                    <Button
                      aria-label="Close modal dialog"
                      className="ds-c-dialog__close"
                      component="button"
                      onClick={[MockFunction]}
                      type="button"
                      variation="transparent"
                    >
                      <button
                        aria-label="Close modal dialog"
                        className="ds-c-button ds-c-button--transparent ds-c-dialog__close"
                        onClick={[Function]}
                        type="button"
                      >
                        <CloseIcon>
                          <SvgIcon
                            ariaHidden={true}
                            className="ds-c-icon--close "
                            inversed={false}
                            title="Close"
                            viewBox="0 0 16 16"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby="icon-1__title"
                              className="ds-c-icon ds-c-icon--close "
                              focusable={false}
                              id="icon-1"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <title
                                id="icon-1__title"
                              >
                                Close
                              </title>
                              <path
                                d="M14.647 11.213c.235.235.353.521.353.858 0 .337-.118.624-.353.859l-1.717 1.717a1.17 1.17 0 01-.86.354c-.336 0-.622-.118-.857-.354l-3.714-3.712-3.712 3.712A1.166 1.166 0 012.93 15c-.337 0-.622-.118-.859-.354L.353 12.93A1.165 1.165 0 010 12.07c0-.337.117-.623.353-.858L4.065 7.5.353 3.789A1.168 1.168 0 010 2.929c0-.336.117-.622.353-.857L2.07.353C2.307.118 2.592 0 2.93 0c.337 0 .623.118.858.353L7.5 4.065 11.213.353c.235-.235.521-.353.857-.353.337 0 .623.118.86.353l1.717 1.719c.235.235.353.521.353.857 0 .338-.118.623-.353.86L10.935 7.5l3.712 3.712z"
                                fillRule="evenodd"
                              />
                            </svg>
                          </SvgIcon>
                        </CloseIcon>
                        Close
                      </button>
                    </Button>
                  </header>
                  <main
                    role="main"
                  >
                    <div
                      id="dialog-content"
                    >
                      Bar
                    </div>
                  </main>
                </div>
              </div>
            </div>
          </div>
        </FocusTrap>
      </Modal>
    </Portal>
  </Displaced>
</Dialog>
`;

exports[`Dialog renders with additional classNames and size 1`] = `
Object {
  "props": Object {
    "actions": <span>
      Pretend these are actions
    </span>,
    "actionsClassName": "test-action",
    "children": "Foo",
    "className": "test-dialog",
    "headerClassName": "test-header",
    "size": "full",
  },
  "wrapper": <Displaced
    dialogClass="ds-c-dialog ds-base test-dialog ds-c-dialog--full"
    escapeExits={true}
    focusDialog={true}
    includeDefaultStyles={false}
    mounted={true}
    titleId="dialog-title dialog-content"
    underlayClass="ds-c-dialog-wrap"
    underlayClickExits={false}
  >
    <div
      role="document"
    >
      <header
        className="ds-c-dialog__header test-header"
        role="banner"
      >
        <Button
          aria-label="Close modal dialog"
          className="ds-c-dialog__close"
          component="button"
          type="button"
          variation="transparent"
        >
          <CloseIcon />
          Close
        </Button>
      </header>
      <main
        role="main"
      >
        <div
          id="dialog-content"
        >
          Foo
        </div>
      </main>
      <aside
        className="ds-c-dialog__actions test-action"
        role="complementary"
      >
        <span>
          Pretend these are actions
        </span>
      </aside>
    </div>
  </Displaced>,
}
`;
